[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "string"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
bincode = "1.3.3"
