[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
once_cell = "1.19.0"
predicates = "1.0.0"
rand = "0.6.5"
sled = "0.34.7"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "string"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
chrono = { version = "0.4.31", features = ["serde"] }
bincode = "1.3.3"
glob = "0.3.1"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
anyhow = "1.0.79"
log = { version = "0.4.20", features = ["kv_unstable"] }
