[package]
name = "sqrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "sqrl_bench"
harness = false


[dev-dependencies]
assert_cmd = "0.11"
criterion = { version = "0.5.1", features = ["async_tokio"] }
crossbeam-utils = "0.8"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "string", "env"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
chrono = { version = "0.4.31", features = ["serde"] }
bincode = "1.3.3"
glob = "0.3.1"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
anyhow = "1.0.79"
log = { version = "0.4.20", features = ["kv_unstable"] }
crossbeam-skiplist = "0.1.3"
dashmap = { version = "5.5.3", features = ["serde"] }
crossbeam-utils = "0.8"
rayon = "1.9.0"
tokio = { version = "1.36.0", features = ["full"] }
raft = { version = "0.7.0" }
prost = "0.12.3"
bytes = "1.6.0"
reqwest = { version = "0.12.2", features = ["json"] }
tracing-slog = "0.2.0"
slog = "2.7.0"

[build-dependencies]
prost-build = "0.12.3"
